added odin logo image, set up div structure

--- a/index.html
+++ b/index.html
@@ -7,12 +7,27 @@
     <title>Sign Up Form</title>
 </head>
 <body>
-    <div class="container>
-        <div class="split left">
-            <img src="splash.avif">
+    <div class="container">
+        <div class="left-split">
+            <div class="splash">
+                <img class="splash" src="splash.avif">
+            </div>
+            <div class ="logo">
+                <img class="odin" src="odin-lined.png">
+                <h2>Odin</h2>
+            </div>
         </div>
 
-        <div class="split right">
+        <div class="right-split">
+            <div class="motto-text">
+                <h2>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up now to get started.</h2>
+            </div>
+            <div class="input-forms">
+
+            </div>
+            <div class="account-area">
+
+            </div>
         </div>
     </div>
 </body>
