--- a/index.html
+++ b/index.html
@@ -20,15 +20,47 @@
 
         <div class="right-split">
             <div class="motto-text">
-                <h2>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up now to get started.</h2>
+                <h2>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up now to get started. You <em>know</em> you want to.</h2>
             </div>
             <div class="input-forms">
-
+                <h2>Let's do this!</h2>
+                <form>
+                    <label for="first-name"> FIRST NAME
+                        <input name="first-name" type="text">
+                    </label>
+                </form>
+                <form>
+                    <label for="last-name"> LAST NAME
+                        <input name="last-name" type="text">
+                    </label>
+                </form>
+                <form>
+                    <label for="email"> EMAIL
+                        <input name="email" type="email">
+                    </label>
+                </form>
+                <form>
+                    <label for="phone"> PHONE NUMBER
+                        <input name="phone" type="tel">
+                    </label>
+                </form>
+                <form>
+                    <label for="password"> PASSWORD 
+                        <input name="password" type="password">
+                    </label>
+                </form>
+                <form>
+                    <label for="confirm-password"> CONFIRM PASSWORD 
+                        <input name="password" type="password">
+                    </label>
+                </form>
             </div>
             <div class="account-area">
-
+                <button>Create Account</button>
+                <h3>Already have an account? <a href="">Log in</a></h3>
             </div>
         </div>
     </div>
+    
 </body>
 </html>
