completed styling on logo side

--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
     <div class="container">
         <div class="left-split">
             <div class="splash">
-                <img class="splash" src="splash.avif">
             </div>
             <div class ="logo">
-                <img class="odin" src="odin-lined.png">
+                <img class="odin-logo" src="odin-lined.png">
                 <h2>Odin</h2>
             </div>
         </div>
