Added validaiton for telephone number, completed first two sections of right side (motto and inputs)

--- a/index.html
+++ b/index.html
@@ -19,40 +19,43 @@
 
         <div class="right-split">
             <div class="motto-text">
-                <h2>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up now to get started. You <em>know</em> you want to.</h2>
+                <h2>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up now to get started. 
+                <br><br>You <em>know</em> you want to.</h2>
             </div>
-            <div class="input-forms">
-                <h2>Let's do this!</h2>
-                <form>
-                    <label for="first-name"> FIRST NAME
-                        <input name="first-name" type="text">
-                    </label>
-                </form>
-                <form>
-                    <label for="last-name"> LAST NAME
-                        <input name="last-name" type="text">
-                    </label>
-                </form>
-                <form>
-                    <label for="email"> EMAIL
-                        <input name="email" type="email">
-                    </label>
-                </form>
-                <form>
-                    <label for="phone"> PHONE NUMBER
-                        <input name="phone" type="tel">
-                    </label>
-                </form>
-                <form>
-                    <label for="password"> PASSWORD 
-                        <input name="password" type="password">
-                    </label>
-                </form>
-                <form>
-                    <label for="confirm-password"> CONFIRM PASSWORD 
-                        <input name="password" type="password">
-                    </label>
-                </form>
+            <div class="input-area">
+                <h3 class="action-text">Let's do this!</h3>
+                <div class="input-forms">
+                    <form>
+                        <label for="first-name"> FIRST NAME
+                            <input name="first-name" type="text">
+                        </label>
+                    </form>
+                    <form>
+                        <label for="last-name"> LAST NAME
+                            <input name="last-name" type="text">
+                        </label>
+                    </form>
+                    <form>
+                        <label for="email"> EMAIL
+                            <input name="email" type="email">
+                        </label>
+                    </form>
+                    <form>
+                        <label for="phone"> PHONE NUMBER
+                            <input name="phone" type="tel" pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}">
+                        </label>
+                    </form>
+                    <form>
+                        <label for="password"> PASSWORD 
+                            <input name="password" type="password">
+                        </label>
+                    </form>
+                    <form>
+                        <label for="confirm-password"> CONFIRM PASSWORD 
+                            <input name="password" type="password">
+                        </label>
+                    </form>
+                </div>
             </div>
             <div class="account-area">
                 <button>Create Account</button>
